# NexReel

./: .env.example  .gitignore  README.md  docker-compose.yml  justfile
.github/: copilot-instructions.md
.github/agents/: crud.agent.md  migration.agent.md  router.agent.md  test.agent.md
.github/instructions/: business-logic.instructions.md  database-schema.instructions.md  (+4 more)
api/: .env.template  README.md  app.js  package-lock.json  package.json
database/: .gitignore  docker-compose.local.yml  docker-compose.yml  schema.sql
fastapi/: .dockerignore  Dockerfile  debug.py  pyproject.toml  start.sh
fastapi/alembic/: env.py
fastapi/alembic/versions/: 001_nexreel_initial.py  002_drop_pending_seasons_episodes.py
fastapi/api/: dependencies.py  main.py
fastapi/api/config/: env.py
fastapi/api/core/: auth.py  example.plex.movie.json  example.plex.tv.json  plex_sync.py  uploads.py
fastapi/api/core/database/: backup.py  database.py
fastapi/api/core/nexreel/: repository.py
fastapi/api/core/schemas/: status.py
fastapi/api/routers/: _helpers.py  backup.py  forums.py  health.py  medias.py  messages.py  playlists.py  plex.py  tv.py  users.py
fastapi/api/static/: swagger-custom.css  swagger-custom.js  swagger-dark-mode.css  swagger.html
fastapi/tests/: conftest.py  test_auth.py  test_forums.py  test_media.py  test_messages.py  test_playlists.py  test_plex.py  test_users.py
web/: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.js
(+285 files in other folders)
