[project]
name = "nexreel-fastapi"
version = "0.1.0"
description = "NexReel FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.36",
    "alembic==1.14.1",
    "psycopg[binary]==3.2.6",
    "cloudinary==1.44.1",
    "cryptography==44.0.1",
    "bcrypt==4.2.1",
    "itsdangerous==2.2.0",
    "pydantic==2.11.1",
    "pydantic-settings==2.9.1",
    "python-multipart==0.0.12",
    "httpx>=0.27",
    "apscheduler>=3.10,<4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
